--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
+    "vue-draggable-next": "^2.2.1",
+    "vuedraggable": "^4.1.0",
     "webdav": "^5.8.0"
   },
   "devDependencies": {
